--- a/src/app/components/Hero/Hero.css
+++ b/src/app/components/Hero/Hero.css
@@ -15,19 +15,19 @@
 }
 
 .portrait {
-  width: 400px;
+  width: 600px;
   height: 400px;
   object-fit: contain;
   filter: drop-shadow(0 4px 20px rgba(0, 0, 0, 0.1));
-  -webkit-mask-image: linear-gradient(to bottom, 
-      black 50%,
-      rgba(0, 0, 0, 0.8) 70%,
-      transparent 100%
+  -webkit-mask-image: radial-gradient(circle at 50% 40%, /* x% y% */
+      black 30%,
+      rgba(0, 0, 0, 0.8) 50%,
+      transparent 70%
   );
-  mask-image: linear-gradient(to bottom, 
-      black 50%,
-      rgba(0, 0, 0, 0.8) 70%,
-      transparent 100%
+  mask-image: radial-gradient(circle at 50% 30%, /* x% y% */
+      black 30%,
+      rgba(0, 0, 0, 0.8) 50%,
+      transparent 70%
   );
   min-width: 400px;
   max-width: none;
@@ -192,7 +192,7 @@
 
     .portrait {
       width: 300px;
-      height: 300px;
+      height: 200px;
       min-width: 300px;
       position: relative;
     }
