--- a/src/app/components/Hero/Hero.css
+++ b/src/app/components/Hero/Hero.css
@@ -231,10 +231,6 @@ h1.hero-title {
 
 
 @media (max-width: 475px) {
-    h1.hero-title {
-      font-size: 1.5rem;
-      line-height: 1.3;
-    }
     
     .hero-description {
       font-size: 0.9rem;
@@ -251,4 +247,12 @@ h1.hero-title {
       max-width: 500px;
       min-width: 180px;
     }
+}
+
+
+@media (max-width: 375px) {
+  h1.hero-title {
+    font-size: 1.5rem;
+    line-height: 1.3;
+  }
 }
