--- a/src/app/components/Hero/Hero.css
+++ b/src/app/components/Hero/Hero.css
@@ -231,6 +231,10 @@ h1.hero-title {
 
 
 @media (max-width: 475px) {
+  h1.hero-title {
+    font-size: 2rem;
+    line-height: 1.3;
+  }
     
     .hero-description {
       font-size: 0.9rem;
